ms-artist refactor quality improvements in error handling, DTOs, and repository